--- a/package.json
+++ b/package.json
@@ -2,17 +2,30 @@
   "name": "paint-timing",
   "version": "1.0.0",
   "description": "browser performance paint timings",
-  "main": "src/paint-timings.js",
   "scripts": {
     "test": "",
-    "build": "npm run lint && npm run generate",
+    "old-build": "npm run lint && npm run generate",
     "lint": "eslint .",
-    "generate": "terser -c -m -o dist/pt.min.js src/pt.js"
+    "generate": "terser -c -m -o dist/pt.min.js src/pt.js",
+    "es": "terser -c -m --module -o dist/pt.es.min.js src/paint-timing.js",
+    "lib": "terser -c -m -o dist/pt.lib.min.js src/paint-timing.js",
+    "build": "rollup -c"
   },
   "devDependencies": {
+    "@babel/core": "^7.3.4",
     "eslint": "^5.15.1",
+    "rollup": "^1.5.0",
+    "rollup-plugin-babel": "^4.3.2",
+    "rollup-plugin-node-resolve": "^4.0.1",
+    "rollup-plugin-replace": "^2.1.0",
+    "rollup-plugin-terser": "^4.0.4",
     "terser": "^3.14.1"
   },
+  "main": "lib/pt.js",
+  "module": "es/pt.js",
+  "files": [
+    "dist"
+  ],
   "repository": "git@github.com:samarpanda/paint-timing.git",
   "author": "Samar Panda <er.samarpanda@gmail.com>",
   "license": "MIT",
